fix: overflow issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,9 @@
 body {
   margin: 0;
   font-family: "Space Grotesk", sans-serif;
-  height: 100vw;
+  height: 100%;
   min-height: 100vh;
+  width: 100%;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
