--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -65,32 +65,30 @@
 
 @media screen and (max-width: 768px) {
   .home {
-    margin: auto 20px;
-    padding-top: 50px;
-    // margin: auto;
+    // margin: 50px 20px;
+    padding-top: 60px;
+    margin: auto;
 
     .container {
       flex-direction: column;
-      text-align: left;
+      text-align: center;
 
       .left {
-        text-align: left;
+        text-align: center;
 
         .header {
-          text-align: left;
+          text-align: center;
           margin: auto;
         }
 
         .body {
           margin: auto;
           margin-block-start: 8px;
-          padding-left: auto;
-          text-align: left;
+          text-align: center;
         }
       }
 
       .right {
-        margin: 50px auto;
         display: none;
       }
     }
